2002-02-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkstyle.c (_gtk_draw_insertion_cursor): change to pass in
	the cursor direction always, not just when we need an arrow, so we
	can flip the cursor around its axis for RTL. Resolves #72372

	* gtk/gtkentry.c (gtk_entry_draw_cursor): update for
	draw_insertion_cursor change
	
	* gtk/gtklabel.c (gtk_label_draw_cursor): ditto

	* gtk/gtktextdisplay.c (gtk_text_layout_draw): ditto
	
2002-02-24  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/x11/gdkwindow-x11.c (gdk_window_set_background):
	Always NULL out bg_pixmap, even when it used to be None
	or parent relative.

2002-02-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextbuffer.c (parent_class): parent_class variable was
	GtkObjectClass instead of GObjectClass

	* gtk/gtktextview.c (widget_to_buffer): fix this the way 
	buffer_to_widget was fixed, to avoid duplicating 
	the code that computes text_window->allocation.x/y

Sun Feb 24 21:18:20 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c (gtk_socket_end_embedding): Fix
	off-by-one error. (Pointed out by Anders Carlsson)

2002-02-25  Matthias Clasen  <maclas@gmx.de>

	* docs/tutorial/gtk-tut.sgml, docs/tutorial/images/*, examples/*: More
	 GTK+ 2.0 updates.

	* docs/tutorial/Makefile.am: build and dist the new tutorial, not
	the old Linuxdoc one.

Mon Feb 25 01:14:26 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktextlayout.c (find_display_line_above): free iter before
	going to done

	* gtk/gtktreeview.c (validate_visible_area): free above_path,
	(set_destination_row): free path before returning,
	(gtk_tree_view_set_drag_dest_row): free current_dest

Sun Feb 24 14:15:45 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (widget_to_buffer): Take border
	width into account.

	* gtk/gtklabel.c (get_label_wrap_width): Don't use GdkFont
	to compute wrap width ... GdkFont will pull in X11 core
	fonts.

Sun Feb 24 00:06:58 2002  Owen Taylor  <otaylor@redhat.com>

	* Released 1.3.15.
